# QA-BOT-RAG

./: .gitignore  pyproject.toml
app/: config.py
app/core/: document_processor.py  embeddings.py  rag_chain.py  ragas_evaluation.py  vector_store.py
app/utils/: logger.py
