[project]
name = "rag-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "fastapi[standard]>=0.138.1",
    "langchain>=1.3.11",
    "langfuse>=4.12.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
]
